[project]
name = "claude-memory-viewer"
version = "0.1.0"
description = "A fully-local web app to view, edit, and delete Claude Code memory files."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Sam Meehan" }]
keywords = ["claude", "claude-code", "memory", "viewer", "local"]
dependencies = []

[project.scripts]
claude-memory-viewer = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
